[project]
name = "mnemo_lm"
version = "0.1.0"
description = "Major system mnemonic generation via constrained LLM decoding."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "fire>=0.7.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
